--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -10,7 +10,7 @@ Author URL: http://shapebootstrap.net
 **************************/
 body {
   padding-top: 100px;
-  background: #fff;
+  background: #999999;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   color: #64686d;
