--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -752,7 +752,7 @@ body {
 .section-header .section-title {
     font-size: 60px;
     /*color: #a11913;*/
-     color: #FFFFFF;
+     color: #FFF;
       /*color: #000;*/
 }
 
