--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -780,6 +780,10 @@ p.text-center.birl-text{
     color: #D72219 !important;
 }
 
+.yellow{
+    color: #666600 !important;
+}
+
 .italic {
     font-style: italic !important;
 }
