--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -779,6 +779,9 @@ p.text-center.birl-text{
 .red {
     color: #D72219 !important;
 }
+.contrared{
+    color: #18CED7 !important;
+}
 
 .yellow{
     color: #666600 !important;
