--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -780,7 +780,7 @@ p.text-center.birl-text{
     color: #D72219 !important;
 }
 .contrared{
-    color: #18CED7 !important;
+    color: #14dc8c !important;
 }
 
 .yellow{
